--- a/css/sor-game.css
+++ b/css/sor-game.css
@@ -8,14 +8,17 @@
 
 .sorGameArea.diamond,
 .sorGameArea.memory,
-.sorGameArea.snake {
+.sorGameArea.snake,
+.sorGameArea.pk {
 	background: transparent url(../image/diamond/background_diamond.png) no-repeat;    
     background-size: cover;
 }
 
 .sorGameArea.diamond .modeBtnsDiv,
 .sorGameArea.memory .modeBtnsDiv,
-.sorGameArea.snake .modeBtnsDiv {
+.sorGameArea.snake .modeBtnsDiv,
+.sorGameArea.pk .modeBtnsDiv,
+.sorGameArea.pk .loadingImg {
 	position: absolute;
     left: 50%;
     top: 50%;
@@ -24,16 +27,22 @@
     text-align: center;	
 }
 
+.sorGameArea.pk .loadingImg {
+  width: 50%;
+}
+
 .sorGameArea.diamond .modeBtnsDiv .titleDiv, 
 .sorGameArea.memory .modeBtnsDiv .titleDiv,
-.sorGameArea.snake .modeBtnsDiv .titleDiv{
+.sorGameArea.snake .modeBtnsDiv .titleDiv,
+.sorGameArea.pk .modeBtnsDiv .titleDiv{
   font-size: 36px;
   padding: 20px;
 }
 
 .sorGameArea.diamond .modeBtnsDiv .modeBtn,
 .sorGameArea.memory .modeBtnsDiv .modeBtn,
-.sorGameArea.snake .modeBtnsDiv .modeBtn {
+.sorGameArea.snake .modeBtnsDiv .modeBtn,
+.sorGameArea.pk .modeBtnsDiv .modeBtn {
     width: 345px;
     height: 100px;
     margin: 0px 15px;
@@ -49,7 +58,9 @@
 .sorGameArea.memory .modeBtnsDiv .modeBtn:hover, 
 .sorGameArea.memory .record .restartBtn:hover,
 .sorGameArea.snake .modeBtnsDiv .modeBtn:hover, 
-.sorGameArea.snake .snakeGameDiv .record .restartBtn:hover {
+.sorGameArea.snake .snakeGameDiv .record .restartBtn:hover,
+.sorGameArea.pk .modeBtnsDiv .modeBtn:hover, 
+.sorGameArea.pk .snakeGameDiv .record .restartBtn:hover {
     background-color: #4daa8889;
     color: white;
   }
@@ -265,5 +276,215 @@
 
 .sorGameArea.snake .snakeGameDiv .record .logo {
   width: 90%;
-  
+}
+
+.sorGameArea.pk .pkGameDiv{
+  text-align: center;
+  width: 100%;
+  height: 100%;
+}
+
+.sorGameArea.pk .pkGameDiv .timeDiv{
+    position: absolute;
+    left: 50%;
+    top: 50px;
+    transform: translateX(-50%);
+    z-index: 1;
+}
+
+.sorGameArea.pk .pkGameDiv .timeDiv span{
+  margin: 0 auto;
+   text-align: center;
+   border-radius: 99em;
+   background-color: #FFC107;
+   display: table;
+   font-size: 54px;
+   font-weight: 900;
+   color: #000;
+   width: 100px;
+   height: 100px;
+   line-height: 100px;
+}
+
+.sorGameArea.pk .pkGameDiv .answerAreaDiv{
+  background: 0;
+  width: 1180px;
+  height: 550px;
+  display: inline-block;
+  position: relative;
+  transform: none;
+  left: 0px;
+  top: 90px;
+}
+
+.sorGameArea.pk .pkGameDiv .answerAreaDiv .questionDiv{
+    background: #00000085;
+    color: #fff;
+    font-weight: bold;
+    height: 100px;
+    padding: 65px 10px 10px 10px;
+    font-size: 36px;
+    border-radius: 30px;
+    width: 95%;
+    transform: translate(-50%,15px );
+    left: 50%;
+    position: absolute;
+
+}
+
+.sorGameArea.pk .pkGameDiv .answerAreaDiv .optionDiv{
+  top: 210px;
+    left: 0;
+    width: 100%;    
+    position: absolute;
+    border: 0;
+}
+
+.sorGameArea.pk .pkGameDiv .answerAreaDiv .optionDiv .userSelectIcon, .sorGameArea.pk .pkGameDiv .answerAreaDiv .optionDiv .npcSelectIcon{
+  position: absolute;
+}
+.sorGameArea.pk .pkGameDiv .answerAreaDiv .optionDiv .userSelectIcon.A{
+  top: 10px;
+  left: 400px;
+}
+
+.sorGameArea.pk .pkGameDiv .answerAreaDiv .optionDiv .userSelectIcon.B{
+  top: 98px;
+    left: 400px;
+}
+
+.sorGameArea.pk .pkGameDiv .answerAreaDiv .optionDiv .userSelectIcon.C{
+  top: 190px;
+    left: 400px;
+}
+
+.sorGameArea.pk .pkGameDiv .answerAreaDiv .optionDiv .userSelectIcon.D{
+  top: 280px;
+    left: 400px;
+}
+
+.sorGameArea.pk .pkGameDiv .answerAreaDiv .optionDiv .npcSelectIcon.A{
+  top: 10px;
+  left: 710px;
+}
+
+.sorGameArea.pk .pkGameDiv .answerAreaDiv .optionDiv .npcSelectIcon.B{
+  top: 98px;
+    left: 710px;
+}
+
+.sorGameArea.pk .pkGameDiv .answerAreaDiv .optionDiv .npcSelectIcon.C{
+  top: 190px;
+    left: 710px;
+}
+
+.sorGameArea.pk .pkGameDiv .answerAreaDiv .optionDiv .npcSelectIcon.D{
+  top: 280px;
+    left: 710px;
+}
+
+.sorGameArea.pk .pkGameDiv .answerAreaDiv .optionDiv .selectDiv .optionBtn{
+  margin: 10px;
+  width: 210px;
+  height: 70px;
+  background-repeat: no-repeat;
+    background-size: 80%;
+    background-color: #00000000;
+    background-position: center;
+    border: none;
+    cursor: pointer;
+}
+
+.sorGameArea.pk .pkGameDiv .answerAreaDiv .optionDiv .selectDiv .optionBtn.correct {
+    border: solid;
+    border-color: #f00;
+    border-radius: 10px;
+}
+
+.sorGameArea.pk .pkGameDiv .answerAreaDiv .optionDiv .selectDiv .optionBtn.A{
+	background-image: url(../image/pk/ans_1.png);
+}
+.sorGameArea.pk .pkGameDiv .answerAreaDiv .optionDiv .selectDiv .optionBtn.B{
+	background-image: url(../image/pk/ans_2.png);
+}
+.sorGameArea.pk .pkGameDiv .answerAreaDiv .optionDiv .selectDiv .optionBtn.C{
+	background-image: url(../image/pk/ans_3.png);
+}
+.sorGameArea.pk .pkGameDiv .answerAreaDiv .optionDiv .selectDiv .optionBtn.D{
+	background-image: url(../image/pk/ans_4.png);
+}
+
+.sorGameArea.pk .pkGameDiv .user {
+  background: #e7dae47a;
+  background-image: url(../image/pk/andygo.png);
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: left;
+  font-weight: bold;
+  font-size: 24px;
+  border-radius: 30px;
+  width: 30%;
+  bottom: 10px;
+  left: 20px;
+  position: absolute;
+}
+
+
+.sorGameArea.pk .pkGameDiv .npc {
+  background: #e0cd9078;
+  background-image: url(../image/pk/muffin.png);
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: right;
+  font-weight: bold;
+  font-size: 24px;
+  border-radius: 30px;
+  width: 30%;
+  bottom: 10px;
+  right: 20px;
+  position: absolute;
+
+}
+
+.sorGameArea.pk .pkGameDiv .answerAreaDiv .userSelectDiv {
+	position: absolute;
+    width: 145px;
+    height: 210px;
+    bottom: 75px;
+}
+
+.sorGameArea.pk .pkGameDiv .answerAreaDiv .userSelectDiv .thinkingDiv{
+	background: transparent url(../image/pk/think.png) no-repeat;    
+	background-size: 100% 100%;
+    width: 145px;
+    height: 80px;
+    position: absolute;
+    bottom: 0;
+    font-size: 28px;
+    line-height: 78px;
+    font-weight: bold;
+}
+
+.sorGameArea.pk .pkGameDiv .answerAreaDiv .userSelectDiv span{
+	text-align: center;
+    font-size: 30px;
+    font-weight: bold;
+	color: #ff0000;
+    bottom: 0;
+    left: 0;
+    position: absolute;
+    width: 100%;
+}
+.sorGameArea.pk .pkGameDiv .answerAreaDiv .userSelectDiv .result{
+	font-size: 30px;
+    font-weight: bold;
+    position: absolute;
+    background: #4CAF50;
+    color: #ff0000;
+    padding: 8px;
+    border-radius: 30px;
+    transform: translate(-50%,0);
+    top: 35%;
+    left: 50%;
+    width: 85%;
 }
